# opendisk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
scripts/: build-local.sh  generate-icon.swift
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  duplicates.rs  finder.rs  lib.rs  main.rs  model.rs  snapshot.rs  util.rs  view.rs  volumes.rs
src-tauri/src/scanner/: arena.rs  mod.rs  progress.rs  walk.rs
src/api/: mock.ts  tauri.ts
src/components/: Breadcrumb.tsx  CollectorTray.tsx  CompareView.tsx  ConfirmModal.tsx  ContextMenu.tsx  DriveSelector.tsx  DuplicatesView.tsx  FilesView.tsx  ModeSwitcher.tsx  ProgressOverlay.tsx  ScanView.tsx  Sidebar.tsx  SidebarRow.tsx  SunburstCanvas.tsx  Toast.tsx  Toolbar.tsx  Tooltip.tsx  categoryMeta.tsx  icons.tsx
src/dock/: dockProgress.ts
src/store/: useAppStore.ts
src/styles/: global.css
src/sunburst/: animate.ts  colors.ts  hitTest.ts  layout.ts  render.ts
src/types/: model.ts
src/utils/: format.ts
