[package]
name = "opendisk"
version = "0.1.0"
description = "High-performance open-source disk space analyzer"
authors = ["OpenDisk Contributors"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "opendisk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Capitalized binary name so the macOS Dock shows "OpenDisk" in dev mode
# (the Dock label for an unbundled process is the executable name).
[[bin]]
name = "OpenDisk"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1"
sysinfo = "0.33"
trash = "5"
dashmap = "6"
tauri-plugin-dialog = "2.7.1"
objc = "0.2"
base64 = "0.22"
blake3 = "1"

[dev-dependencies]
tempfile = "3"

